add all levels of product service
