# app/services/product/internal/entities/entities.go
@@ -1,3 +1,5 @@
+//основные сущности и их валидация
+
 package entities
 
 import (
@@ -7,187 +9,109 @@ import (
 	"strconv"
 )
 
-type UserDiscription string
-
-type UserInterest string
-
-type UserInterests []UserInterest
-
-type UserAge int
-
 type ErrorResponse struct {
 	Reason string `json:"reason"`
 }
 
 const (
-	emailMaxLenth = 64
-	emailMinLenth = 10
+	keywordtMaxLenth = 32
+	keywordtMinLenth = 1
 
-	usernameMaxLenth = 20
-	usernameMinLenth = 3
+	categoryMaxLenth = 32
+	categoryMinLenth = 1
 
-	passwordMaxLenth = 32
-	passwordMinLenth = 8
+	descriptionMaxLenth = 255
+	descriptionMinLenth = 1
 
-	userDiscriptionMaxLenth = 1024
-
-	userInterestMaxLenth = 32
-
-	maxUserAge = 150
-	minUserAge = 5
+	pattern = `^[a-zA-Zа-яА-Я]+$`
 )
 
-type UserInfo struct {
-	UsrId           int             `json:"userId" db:"id"`
-	Usrname         string          `json:"username" db:"username"`
-	Email           string          `json:"email" binding:"required"`
-	Password        string          `json:"password" binding:"required"`
-	UsrDesc         UserDiscription `json:"discription" binding:"required"`
-	UserInterests   UserInterests   `json:"interests" binding:"required"`
-	UsrAge          UserAge         `json:"age" binding:"required"`
-	IsEmailVerified bool            `json:"isVerified"`
+type ProductInfo struct {
+	ProductId       int      `json:"userId" db:"productId"`
+	Category        string   `json:"category" binding:"required"`
+	Description     string   `json:"description" binding:"required"`
+	Status          string   `json:"status" binding:"required"`
+	ProductKeyWords []string `json:"productKeyWords" binding:"required"`
 }
 
-func ValidateUserId(usrId int) error {
+func ValidateProductId(prId int) error {
 
-	if usrId < 0 {
+	if prId < 0 {
 		return errors.New("invalid user id: can`t be less 0")
 	}
 
 	return nil
 }
 
-func ValidateUsername(username string) error {
-	re := regexp.MustCompile(`^[a-zA-Z0-9_]+$`)
+func ValidateCategory(category string) error {
+	re := regexp.MustCompile(pattern)
 
-	if !re.MatchString(username) {
-		return fmt.Errorf("invalid username: %s does not match regexp", username)
+	if !re.MatchString(category) {
+		return fmt.Errorf("invalid category: %s does not match regexp", category)
 	}
-	if len(username) > usernameMaxLenth {
-		return errors.New("invalid username: too long, max length is " + strconv.Itoa(usernameMaxLenth))
-	}
-
-	if len(username) < usernameMinLenth {
-		return errors.New("invalid username: too short, min length is " + strconv.Itoa(usernameMinLenth))
+	if len(category) > categoryMaxLenth {
+		return errors.New("invalid category: too long, max length is " + strconv.Itoa(categoryMaxLenth))
 	}
 
-	return nil
-}
-
-func ValidateEmail(email string) error {
-	re := regexp.MustCompile(`^[a-zA-Z0-9._%+\-]+@[a-zA-Z0-9.\-]+\.[a-z]{2,}$`)
-
-	if !re.MatchString(email) {
-		return errors.New("invalid email: does not math regexp")
-	}
-
-	if len(email) > emailMaxLenth {
-		return fmt.Errorf("%s %s", "invalid email: too long, max length is",
-			strconv.Itoa(emailMaxLenth))
-	}
-
-	if len(email) < emailMinLenth {
-		return fmt.Errorf("%s %s", "invalid email: too short, min length is",
-			strconv.Itoa(emailMinLenth))
+	if len(category) < categoryMinLenth {
+		return errors.New("invalid category: too short, min length is " + strconv.Itoa(categoryMinLenth))
 	}
 
 	return nil
 }
 
-func ValidatePassword(password string) error {
-	re := regexp.MustCompile(`^[a-zA-Z][a-zA-Z0-9!@#$%^&()*]+$`)
+func ValidateDescription(description string) error {
 
-	if !re.MatchString(string(password)) {
-		return errors.New("invalid password: does not math regexp")
+	if len(description) > descriptionMaxLenth {
+		return fmt.Errorf("%s %s", "invalid description: too long, max length is",
+			strconv.Itoa(descriptionMaxLenth))
 	}
 
-	if len(password) > passwordMaxLenth {
-		return fmt.Errorf("%s %s", "invalid password: too long, max length is",
-			strconv.Itoa(passwordMaxLenth))
-	}
-
-	if len(password) < passwordMinLenth {
-		return fmt.Errorf("%s %s", "invalid password: too short, min length is",
-			strconv.Itoa(passwordMinLenth))
+	if len(description) < descriptionMinLenth {
+		return fmt.Errorf("%s %s", "invalid description: too short, min length is",
+			strconv.Itoa(descriptionMinLenth))
 	}
 
 	return nil
 }
 
-func ValidateCode(code string) error {
-	re := regexp.MustCompile(`^[0-9]{5}$`)
+func ValidateProductKeyWord(keyword string) error {
+	re := regexp.MustCompile(pattern)
 
-	if !re.MatchString(code) {
-		return errors.New("invalid code: does not match regexp")
+	if !re.MatchString(keyword) {
+		return fmt.Errorf("invalid keyword: %s does not match regexp", keyword)
+	}
+
+	if len(keyword) > keywordtMaxLenth {
+		return errors.New("invalid keyword: too long, max length is " + strconv.Itoa(keywordtMaxLenth))
+	}
+
+	if len(keyword) < keywordtMinLenth {
+		return errors.New("invalid keyword: too short, min length is " + strconv.Itoa(keywordtMinLenth))
 	}
 
 	return nil
 
 }
 
-func (ud *UserDiscription) ValidateUserDiscription() error {
+func (pr *ProductInfo) ValidateProductInfo() error {
 
-	if len(*ud) > userDiscriptionMaxLenth {
-		return fmt.Errorf("%s %s", "invalid user discription: too long, max length is",
-			strconv.Itoa(userDiscriptionMaxLenth))
+	if err := ValidateCategory(pr.Category); err != nil {
+		return err
 	}
-	return nil
-}
 
-func (ui *UserInterest) ValidateUserInterest() error {
-	if len(*ui) > userInterestMaxLenth {
-		return fmt.Errorf("%s %s", "invalid user intersest: too long, max length is",
-			strconv.Itoa(userInterestMaxLenth))
+	if err := ValidateDescription(pr.Description); err != nil {
+		return err
 	}
-	return nil
-}
 
-func (ui *UserInterests) ValidateUserInterests() error {
-	for elem, userInterest := range *ui {
-		if err := userInterest.ValidateUserInterest(); err != nil {
-			return fmt.Errorf("user interests[%d]: %s", elem, err.Error())
+	if err := ValidateProductId(pr.ProductId); err != nil {
+		return err
+	}
+
+	for _, keyword := range pr.ProductKeyWords {
+		if err := ValidateProductKeyWord(keyword); err != nil {
+			return err
 		}
-	}
-
-	if len(*ui) == 0 {
-		return errors.New("invalid user intersest: can`t be empty")
-	}
-
-	return nil
-}
-
-func (a *UserAge) ValidateUserAge() error {
-	if *a > maxUserAge || *a < minUserAge {
-		return fmt.Errorf("%s %s and %s", "invalid user age: must be between",
-			strconv.Itoa(minUserAge), strconv.Itoa(maxUserAge))
-	}
-	return nil
-}
-
-func (inf *UserInfo) ValidateUserInfo() error {
-
-	if err := ValidateUsername(inf.Usrname); err != nil {
-		return err
-	}
-
-	if err := ValidateEmail(inf.Email); err != nil {
-		return err
-	}
-
-	if err := ValidatePassword(inf.Password); err != nil {
-		return err
-	}
-
-	if err := inf.UsrDesc.ValidateUserDiscription(); err != nil {
-		return err
-	}
-
-	if err := inf.UserInterests.ValidateUserInterests(); err != nil {
-		return err
-	}
-
-	if err := inf.UsrAge.ValidateUserAge(); err != nil {
-		return err
 	}
 
 	return nil
